--- a/ptychography/abTEM/rpie_abTEM_legacy.ipynb
+++ b/ptychography/abTEM/rpie_abTEM_legacy.ipynb
@@ -215,25 +215,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "01951937",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_iter = 5\n",
+    "n_probe = 7 # for mixed-state ptychography or mixed-state multislice ptychography\n",
+    "n_slice = 15 # for multislice ptychography or mixed-state multislice ptychography\n",
+    "slice_thickness = 20 # for multislice ptychography\n",
+    "\n",
+    "# abTEM recontruction parameters\n",
+    "alpha = 0.5 # also used in PtyREX\n",
+    "beta = 0.2 # also used in PtyREX\n",
+    "probe_position_correction = False\n",
+    "pre_position_correction_update_steps = 1\n",
+    "position_step_size = 0.5\n",
+    "step_size_damping_rate = 0.995"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dd6dca66",
    "metadata": {},
    "outputs": [],
    "source": [
     "# rPIE\n",
-    "\n",
-    "n_iter = 5\n",
     "RPIE_operator = RegularizedPtychographicOperator(experimental_measurement,\n",
     "                                                               semiangle_cutoff=semiangle,\n",
     "                                                               energy=energy,\n",
     "                                                               device=device,\n",
     "                                                               parameters={'object_px_padding':(0, 0)}).preprocess()\n",
     "\n",
+    "reconstruction_parameters = {}\n",
+    "reconstruction_parameters['alpha'] = alpha\n",
+    "reconstruction_parameters['beta'] = beta\n",
+    "if probe_position_correction:\n",
+    "    reconstruction_parameters['pre_position_correction_update_steps'] = RPIE_operator._num_diffraction_patterns * int(pre_position_correction_update_steps)\n",
+    "    reconstruction_parameters['position_step_size'] = position_step_size\n",
+    "    reconstruction_parameters['step_size_damping_rate'] = step_size_damping_rate\n",
+    "\n",
     "exp_objects, exp_probes, exp_positions, exp_sse  = RPIE_operator.reconstruct(\n",
     "    max_iterations = n_iter,\n",
     "    random_seed=1,\n",
     "    return_iterations=True,\n",
-    "    parameters={'alpha':1.0,\n",
-    "                'beta':1.0})"
+    "    parameters=reconstruction_parameters)"
    ]
   },
   {
@@ -300,9 +326,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tifffile.imwrite(\"rpie_result.tif\", \n",
-    "                 np.angle(exp_objects[-1].array).T[:int(recon_shape[1]*recon_extent_y_ratio), \n",
-    "                                                   :int(recon_shape[0]*recon_extent_x_ratio)])"
+    "objects = []\n",
+    "probes = []\n",
+    "\n",
+    "for i in range(n_iter):\n",
+    "    objects.append(np.angle(exp_objects[i].array).T[:int(recon_shape[1]*recon_extent_y_ratio), \n",
+    "                                                   :int(recon_shape[0]*recon_extent_x_ratio)])\n",
+    "    probes.append(exp_probes[i].array)\n",
+    "\n",
+    "\n",
+    "tifffile.imwrite(\"rpie_object.tif\", np.asarray(objects))\n",
+    "tifffile.imwrite(\"rpie_probe.tif\", np.asarray(probes).astype(np.complex64))"
    ]
   },
   {
@@ -314,8 +348,6 @@
    "source": [
     "# mixed state ptychography\n",
     "\n",
-    "n_iter = 20\n",
-    "n_probe = 5\n",
     "Mixed_operator = MixedStatePtychographicOperator(experimental_measurement,\n",
     "                                                               num_probes=n_probe,\n",
     "                                                               semiangle_cutoff=semiangle,\n",
@@ -323,10 +355,19 @@
     "                                                               device=device,\n",
     "                                                               parameters={'object_px_padding':(0,0 )}).preprocess()\n",
     "\n",
+    "reconstruction_parameters = {}\n",
+    "reconstruction_parameters['alpha'] = alpha\n",
+    "reconstruction_parameters['beta'] = beta\n",
+    "if probe_position_correction:\n",
+    "    reconstruction_parameters['pre_position_correction_update_steps'] = Mixed_operator._num_diffraction_patterns * int(pre_position_correction_update_steps)\n",
+    "    reconstruction_parameters['position_step_size'] = position_step_size\n",
+    "    reconstruction_parameters['step_size_damping_rate'] = step_size_damping_rate\n",
+    "\n",
     "exp_objects, exp_probes, exp_positions, exp_sse  = Mixed_operator.reconstruct(\n",
     "    max_iterations = n_iter,\n",
     "    random_seed=1,\n",
-    "    return_iterations=True)"
+    "    return_iterations=True,\n",
+    "    parameters=reconstruction_parameters)"
    ]
   },
   {
@@ -396,9 +437,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tifffile.imwrite(\"mixed_rpie_result.tif\", \n",
-    "                 np.angle(exp_objects[-1].array).T[:int(recon_shape[1]*recon_extent_y_ratio), \n",
-    "                                                   :int(recon_shape[0]*recon_extent_x_ratio)])"
+    "objects = []\n",
+    "probes = []\n",
+    "\n",
+    "for i in range(n_iter):\n",
+    "    objects.append(np.angle(exp_objects[i].array).T[:int(recon_shape[1]*recon_extent_y_ratio), \n",
+    "                                                   :int(recon_shape[0]*recon_extent_x_ratio)])\n",
+    "    probe_iter = []\n",
+    "    for j in range(n_probe):\n",
+    "        probe_iter.append(exp_probes[i][j].array)\n",
+    "    probes.append(probe_iter)\n",
+    "\n",
+    "tifffile.imwrite(\"mixed_rpie_object.tif\", np.asarray(objects))\n",
+    "tifffile.imwrite(\"mixed_rpie_probe.tif\", np.asarray(probes).astype(np.complex64))"
    ]
   },
   {
@@ -409,24 +460,28 @@
    "outputs": [],
    "source": [
     "# multislice ptychography\n",
-    "\n",
-    "n_slice = 10\n",
-    "slice_thicknesses = 500 / n_slice # angstrom\n",
-    "n_iter = 10\n",
-    "\n",
     "Multislice_operator = MultislicePtychographicOperator(experimental_measurement,\n",
     "                                                        semiangle_cutoff=semiangle,\n",
     "                                                        energy=energy,\n",
     "                                                        num_slices = n_slice,\n",
-    "                                                        slice_thicknesses = slice_thicknesses,\n",
+    "                                                        slice_thicknesses = slice_thickness,\n",
     "                                                        device=device,\n",
     "                                                        parameters={'object_px_padding':(0,0)}).preprocess()\n",
+    "\n",
+    "reconstruction_parameters = {}\n",
+    "reconstruction_parameters['alpha'] = alpha\n",
+    "reconstruction_parameters['beta'] = beta\n",
+    "if probe_position_correction:\n",
+    "    reconstruction_parameters['pre_position_correction_update_steps'] = Mixed_operator._num_diffraction_patterns * int(pre_position_correction_update_steps)\n",
+    "    reconstruction_parameters['position_step_size'] = position_step_size\n",
+    "    reconstruction_parameters['step_size_damping_rate'] = step_size_damping_rate\n",
     "\n",
     "mspie_objects, mspie_probes, mspie_positions, mspie_sse = Multislice_operator.reconstruct(\n",
     "    max_iterations = n_iter,\n",
     "    verbose=True,\n",
     "    random_seed=1,\n",
-    "    return_iterations=True)"
+    "    return_iterations=True,\n",
+    "    parameters=reconstruction_parameters)"
    ]
   },
   {
@@ -520,10 +575,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(n_slice):\n",
-    "    tifffile.imwrite(\"multislice_result.tif\", \n",
-    "                     np.angle(mspie_objects[-1].array[i]).T[:int(recon_shape[1]*recon_extent_y_ratio), \n",
-    "                                                            :int(recon_shape[0]*recon_extent_x_ratio)])"
+    "objects = []\n",
+    "probes = []\n",
+    "for i in range(n_iter):\n",
+    "    object_iter = []\n",
+    "    probe_iter = []\n",
+    "    for j in range(n_slice):\n",
+    "        object_iter.append(np.angle(mspie_objects[i][j].array).T[:int(recon_shape[1]*recon_extent_y_ratio), \n",
+    "                                                   :int(recon_shape[0]*recon_extent_x_ratio)])\n",
+    "        probe_iter.append(mspie_probes[i][j].array)\n",
+    "    objects.append(object_iter)\n",
+    "    probes.append(probe_iter)\n",
+    "\n",
+    "tifffile.imwrite(\"multislice_object.tif\", np.asarray(objects))\n",
+    "tifffile.imwrite(\"multislice_probe.tif\", np.asarray(probes).astype(np.complex64))"
    ]
   }
  ],
