--- a/ptychography/py4DSTEM/py4DSTEM_phase_reconstruction.ipynb
+++ b/ptychography/py4DSTEM/py4DSTEM_phase_reconstruction.ipynb
@@ -154,10 +154,16 @@
     "    cmap = 'jet',\n",
     ")\n",
     "\n",
-    "# Estimate the radius of the BF disk, and the center coordinates\n",
-    "# Get probe radius in pixels\n",
-    "probe_radius_pixels, probe_qx0, probe_qy0 = dataset.get_probe_size(plot = False)\n",
-    "print(probe_radius_pixels, probe_qx0, probe_qy0)"
+    "dataset.get_dp_mean()\n",
+    "dataset.get_dp_max()\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
+    "ax.imshow(dataset.tree('dp_mean')[:, :], cmap='jet')\n",
+    "fig.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "probe_radius_pixels, probe_qx0, probe_qy0 = dataset.get_probe_size(thresh_lower=0.01, thresh_upper=0.99, N=100, plot=True)\n",
+    "plt.show()"
    ]
   },
   {
@@ -173,17 +179,10 @@
     "radius_BF = probe_radius_pixels + expand_BF\n",
     "radii_DF = (probe_radius_pixels + expand_BF, 1e3)\n",
     "\n",
-    "py4DSTEM.show(\n",
-    "    dataset.tree('dp_mean'),\n",
-    "    scaling = 'log',\n",
-    "    cmap = 'gray',\n",
-    "    circle = {\n",
-    "    'center':(probe_qx0, probe_qy0),\n",
-    "    'R': probe_radius_pixels + expand_BF,\n",
-    "    'alpha':0.3,\n",
-    "    'fill':True\n",
-    "    }\n",
-    ")\n",
+    "# Make a virtual bright field and dark field image\n",
+    "center = (probe_qx0, probe_qy0)\n",
+    "radius_BF = probe_radius_pixels\n",
+    "radii_DF = (probe_radius_pixels, int(dataset.Q_Nx/2))\n",
     "\n",
     "dataset.get_virtual_image(\n",
     "    mode = 'circle',\n",
@@ -198,17 +197,13 @@
     "    shift_center = False,\n",
     ")\n",
     "\n",
-    "# plot the virtual images\n",
-    "py4DSTEM.show(\n",
-    "    [\n",
-    "        dataset.tree('bright_field'),\n",
-    "        dataset.tree('dark_field'),               \n",
-    "    ],\n",
-    "    cmap='viridis',\n",
-    "    ticks = False,\n",
-    "    axsize=(4,4),\n",
-    "    title=['Bright Field','Dark Field'],\n",
-    ")"
+    "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "ax[0].imshow(dataset.tree('bright_field')[:, :], cmap=\"inferno\")\n",
+    "ax[0].set_title(\"BF image\")\n",
+    "ax[1].imshow(dataset.tree('dark_field')[:, :], cmap=\"inferno\")\n",
+    "ax[1].set_title(\"ADF image [%.1f, %.1f] mrad\"%(radii_DF[0]*dataset.Q_pixel_size, radii_DF[1]*dataset.Q_pixel_size))\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -217,11 +212,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the DPC reconstruction\n",
-    "dpc = py4DSTEM.process.phase.DPCReconstruction(\n",
+    "dpc = py4DSTEM.process.phase.DPC(\n",
     "    datacube=dataset,\n",
     "    energy = HT,\n",
-    ").preprocess()"
+    ").preprocess()\n",
+    "plt.show()"
    ]
   },
   {
@@ -234,10 +229,15 @@
     "    max_iter=8,\n",
     "    store_iterations=True,\n",
     "    reset=True,\n",
+    "    gaussian_filter_sigma=0.1,\n",
+    "    gaussian_filter=True,\n",
+    "    q_lowpass=None,\n",
+    "    q_highpass=None\n",
     ").visualize(\n",
     "    iterations_grid='auto',\n",
-    "    figsize=(12,8)\n",
-    ")"
+    "    figsize=(16, 10)\n",
+    ")\n",
+    "plt.show()"
    ]
   },
   {
@@ -246,8 +246,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize the reconstruction class\n",
-    "parallax = py4DSTEM.process.phase.ParallaxReconstruction(\n",
+    "dpc_cor = py4DSTEM.process.phase.DPC(\n",
+    "    datacube=dataset,\n",
+    "    energy=HT,\n",
+    "    verbose=False,\n",
+    ").preprocess(\n",
+    "    force_com_rotation = np.rad2deg(dpc._rotation_best_rad),\n",
+    "    force_com_transpose = False,\n",
+    ")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dpc_cor.reconstruct(\n",
+    "    max_iter=8,\n",
+    "    store_iterations=True,\n",
+    "    reset=True,\n",
+    "    gaussian_filter_sigma=0.1,\n",
+    "    gaussian_filter=True,\n",
+    "    q_lowpass=None,\n",
+    "    q_highpass=None\n",
+    ").visualize(\n",
+    "    iterations_grid='auto',\n",
+    "    figsize=(16, 10)\n",
+    ")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "ax[0].imshow(dpc._com_normalized_y, cmap=\"bwr\")\n",
+    "ax[0].set_title(\"CoMx\")\n",
+    "ax[1].imshow(dpc._com_normalized_x, cmap=\"bwr\")\n",
+    "ax[1].set_title(\"CoMy\")\n",
+    "ax[2].imshow(np.sqrt(dpc._com_normalized_y**2 + dpc._com_normalized_x**2), cmap=\"inferno\")\n",
+    "ax[2].set_title(\"Magnitude of CoM\")\n",
+    "fig.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 3, figsize=(15, 5))\n",
+    "ax[0].imshow(dpc_cor._com_normalized_y, cmap=\"bwr\")\n",
+    "ax[0].set_title(\"CoMx - rotation corrected\")\n",
+    "ax[1].imshow(dpc_cor._com_normalized_x, cmap=\"bwr\")\n",
+    "ax[1].set_title(\"CoMy - rotation corrected\")\n",
+    "ax[2].imshow(np.sqrt(dpc_cor._com_normalized_y**2 + dpc_cor._com_normalized_x**2), cmap=\"inferno\")\n",
+    "ax[2].set_title(\"Magnitude of CoM - rotation corrected\")\n",
+    "fig.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "ax[0].imshow(dpc.object_phase, cmap=\"inferno\")\n",
+    "ax[0].set_title(\"iCoM\")\n",
+    "ax[1].imshow(dpc_cor.object_phase, cmap=\"inferno\")\n",
+    "ax[1].set_title(\"iCoM - rotation corrected\")\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parallax = py4DSTEM.process.phase.Parallax(\n",
     "    datacube=dataset,\n",
     "    energy = HT,\n",
     "    device = device, \n",
@@ -271,8 +343,27 @@
     "    regularize_shifts=True,\n",
     "    running_average=True,\n",
     "    min_alignment_bin = 2,\n",
-    "    max_iter_at_min_bin = 6,\n",
-    ")"
+    "    num_iter_at_min_bin = 4,\n",
+    ")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parallax.show_shifts()\n",
+    "plt.show()\n",
+    "\n",
+    "parallax.subpixel_alignment(\n",
+    "    #kde_upsample_factor=2,\n",
+    "    kde_sigma_px=0.125,\n",
+    "    plot_upsampled_BF_comparison=True,\n",
+    "    plot_upsampled_FFT_comparison=True,\n",
+    ")\n",
+    "plt.show()"
    ]
   },
   {
@@ -282,8 +373,12 @@
    "outputs": [],
    "source": [
     "parallax.aberration_fit(\n",
-    "    plot_CTF_compare = True,\n",
-    ")"
+    "    plot_CTF_comparison=True,\n",
+    ")\n",
+    "plt.show()\n",
+    "\n",
+    "parallax.aberration_correct(figsize=(5, 5))\n",
+    "plt.show()"
    ]
   },
   {
@@ -292,16 +387,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parallax.aberration_correct(figsize=(10, 10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "depth_sections = parallax.depth_section(depth_angstroms=np.arange(-300, 310, 100), figsize=(20, 10))"
+    "depth_sections = parallax.depth_section(depth_angstroms=np.arange(0, 200, 20), figsize=(12, 10))\n",
+    "plt.show()"
    ]
   },
   {
@@ -312,11 +399,11 @@
    "source": [
     "# Get the probe convergence semiangle from the pixel size and estimated radius in pixels\n",
     "semiangle_cutoff = dataset.calibration.get_Q_pixel_size() * probe_radius_pixels\n",
-    "print('semiangle cutoff estimate = ' + str(np.round(semiangle_cutoff,decimals=1)) + ' mrads')\n",
+    "print('semiangle cutoff estimate = ' + str(np.round(semiangle_cutoff, decimals=1)) + ' mrads')\n",
     "\n",
     "# Get the estimated defocus from the parallax reconstruction - note that defocus dF has the opposite sign as the C1 aberration!\n",
-    "defocus = parallax.aberration_C1\n",
-    "print('estimated defocus         = ' + str(np.round(defocus*-1)) + ' Angstroms')\n",
+    "defocus = -parallax.aberration_C1\n",
+    "print('estimated defocus         = ' + str(np.round(defocus)) + ' Angstroms')\n",
     "\n",
     "rotation_degrees = np.rad2deg(parallax.rotation_Q_to_R_rads)\n",
     "print('estimated rotation        = ' + str(np.round(rotation_degrees)) + ' deg')"
@@ -328,7 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ptycho = py4DSTEM.process.phase.SingleslicePtychographicReconstruction(\n",
+    "ptycho = py4DSTEM.process.phase.SingleslicePtychography(\n",
     "    datacube=dataset,\n",
     "    device = device,\n",
     "    energy = HT,\n",
@@ -351,7 +438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ptycho = ptycho.reconstruct(\n",
+    "ptycho_recon = ptycho.reconstruct(\n",
     "    reset = True,\n",
     "    store_iterations = True,\n",
     "    max_iter = 20,\n",
@@ -370,7 +457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ptycho.visualize(figsize=(16, 8))"
+    "ptycho_recon.visualize(figsize=(16, 8))"
    ]
   },
   {
@@ -379,19 +466,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rotated_crop = ptycho._crop_rotate_object_fov(ptycho.object)\n",
+    "rotated_crop = ptycho_recon._crop_rotate_object_fov(ptycho.object)\n",
     "rotated_shape = rotated_crop.shape\n",
     "\n",
     "rotate_extent = [\n",
     "    0,\n",
-    "    ptycho.sampling[1] * rotated_shape[1],\n",
-    "    ptycho.sampling[0] * rotated_shape[0],\n",
+    "    ptycho_recon.sampling[1] * rotated_shape[1],\n",
+    "    ptycho_recon.sampling[0] * rotated_shape[0],\n",
     "    0,\n",
     "]\n",
     "\n",
     "\n",
     "fig, ax = plt.subplots(1, 2, figsize=(8, 4))\n",
-    "ax[0].imshow(np.abs(ptycho.object), cmap='inferno')\n",
+    "ax[0].imshow(np.abs(ptycho_recon.object), cmap='inferno')\n",
     "ax[1].imshow(np.abs(rotated_crop), cmap='inferno', extent=rotate_extent)\n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -403,11 +490,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ptycho_mix = py4DSTEM.process.phase.MixedstatePtychographicReconstruction(\n",
+    "n_probe = 5\n",
+    "\n",
+    "ptycho_mix = py4DSTEM.process.phase.MixedstatePtychography(\n",
     "    datacube=dataset,\n",
     "    verbose=True,\n",
     "    energy=HT,\n",
-    "    num_probes=2,\n",
+    "    num_probes=n_probe,\n",
     "    semiangle_cutoff=semiangle_cutoff,\n",
     "    defocus=defocus,\n",
     "    device=device,\n",
@@ -424,7 +513,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ptycho_mix = ptycho_mix.reconstruct(\n",
+    "ptycho_recon = ptycho_mix.reconstruct(\n",
     "    reset=True,\n",
     "    store_iterations=True,\n",
     "    max_iter = 20,\n",
@@ -443,7 +532,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ptycho_mix.visualize(figsize=(16, 8))"
+    "ptycho_recon.visualize(figsize=(16, 8))"
    ]
   },
   {
@@ -452,19 +541,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rotated_crop = ptycho_mix._crop_rotate_object_fov(ptycho_mix.object)\n",
+    "rotated_crop = ptycho_recon._crop_rotate_object_fov(ptycho_recon.object)\n",
     "rotated_shape = rotated_crop.shape\n",
     "\n",
     "rotate_extent = [\n",
     "    0,\n",
-    "    ptycho_mix.sampling[1] * rotated_shape[1],\n",
-    "    ptycho_mix.sampling[0] * rotated_shape[0],\n",
+    "    ptycho_recon.sampling[1] * rotated_shape[1],\n",
+    "    ptycho_recon.sampling[0] * rotated_shape[0],\n",
     "    0,\n",
     "]\n",
     "\n",
     "\n",
     "fig, ax = plt.subplots(1, 2, figsize=(8, 4))\n",
-    "ax[0].imshow(np.abs(ptycho_mix.object), cmap='inferno')\n",
+    "ax[0].imshow(np.abs(ptycho_recon.object), cmap='inferno')\n",
     "ax[1].imshow(np.abs(rotated_crop), cmap='inferno', extent=rotate_extent)\n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -476,16 +565,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "intensity_arrays = np.array([np.abs(probe)**2 for probe in ptycho_mix.probe])\n",
+    "intensity_arrays = np.array([np.abs(probe)**2 for probe in ptycho_recon.probe])\n",
     "probe_ratio      = [np.sum(intensity_array)/intensity_arrays.sum() for intensity_array in intensity_arrays]\n",
     "\n",
     "py4DSTEM.show(\n",
     "    [\n",
-    "        np.abs(ptycho_mix.probe_fourier[0])**2,\n",
-    "        np.abs(ptycho_mix.probe_fourier[1])**2\n",
+    "        np.abs(ptycho_recon.probe_fourier[0])**2,\n",
+    "        np.abs(ptycho_recon.probe_fourier[1])**2\n",
     "    ],\n",
     "    scalebar=True,\n",
-    "    pixelsize=ptycho_mix.angular_sampling[0],\n",
+    "    pixelsize=ptycho_recon.angular_sampling[0],\n",
     "    pixelunits=\"mrad\",\n",
     "    ticks=False,\n",
     "    title=[\n",
@@ -504,7 +593,7 @@
     "num_slice = 8\n",
     "slice_thickness = 2.23\n",
     "\n",
-    "ms_ptycho = py4DSTEM.process.phase.MultislicePtychographicReconstruction(\n",
+    "ms_ptycho = py4DSTEM.process.phase.MultislicePtychography(\n",
     "    datacube=dataset,\n",
     "    num_slices=num_slice,\n",
     "    slice_thicknesses=slice_thickness,\n",
@@ -525,7 +614,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ms_ptycho = ms_ptycho.reconstruct(\n",
+    "ptycho_recon = ms_ptycho.reconstruct(\n",
     "    reset=True,\n",
     "    store_iterations=True,\n",
     "    max_iter = 20,\n",
@@ -541,7 +630,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ms_ptycho.visualize(figsize=(16, 8))"
+    "ptycho_recon.visualize(figsize=(16, 8))"
    ]
   },
   {
@@ -552,21 +641,21 @@
    "source": [
     "fig, ax = plt.subplots(1, num_slice+1, figsize=(4*(num_slice+1), 4))\n",
     "\n",
-    "slice_object = ms_ptycho.object_iterations[29]\n",
+    "slice_object = ptycho_recon.object_iterations[29]\n",
     "\n",
     "for i in range(num_slice):\n",
-    "    rotated_crop = ms_ptycho._crop_rotate_object_fov(slice_object[i])\n",
+    "    rotated_crop = ptycho_recon._crop_rotate_object_fov(slice_object[i])\n",
     "    rotated_shape = rotated_crop.shape\n",
     "\n",
     "    rotate_extent = [\n",
     "        0,\n",
-    "        ms_ptycho.sampling[1] * rotated_shape[1],\n",
-    "        ms_ptycho.sampling[0] * rotated_shape[0],\n",
+    "        ptycho_recon.sampling[1] * rotated_shape[1],\n",
+    "        ptycho_recon.sampling[0] * rotated_shape[0],\n",
     "        0,\n",
     "    ]\n",
     "    ax[i].imshow(np.angle(rotated_crop), cmap='inferno', extent=rotate_extent)\n",
     "\n",
-    "sum_object = ms_ptycho._crop_rotate_object_fov(np.sum(slice_object, axis=0))\n",
+    "sum_object = ptycho_recon._crop_rotate_object_fov(np.sum(slice_object, axis=0))\n",
     "ax[-1].imshow(np.angle(sum_object), cmap='inferno', extent=rotate_extent)\n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -578,7 +667,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ms_ptycho_tune = py4DSTEM.process.phase.MultislicePtychographicReconstruction(\n",
+    "ms_ptycho = py4DSTEM.process.phase.MultislicePtychography(\n",
     "    datacube=dataset,\n",
     "    num_slices=num_slice,\n",
     "    slice_thicknesses=slice_thickness,\n",
@@ -599,7 +688,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ms_ptycho_tune = ms_ptycho_tune.tune_num_slices_and_thicknesses(\n",
+    "ms_ptycho_tune = ms_ptycho.tune_num_slices_and_thicknesses(\n",
     "        num_slices_guess=num_slice,\n",
     "        thicknesses_guess=slice_thickness,\n",
     "        num_slices_step_size=1,\n",
@@ -612,6 +701,85 @@
     "        plot_convergence=True,\n",
     "        return_values=True,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_slice = 8\n",
+    "slice_thickness = 2.23\n",
+    "n_probe = 5\n",
+    "\n",
+    "mms_ptycho = py4DSTEM.process.phase.MixedstateMultislicePtychography(\n",
+    "    datacube=dataset,\n",
+    "    num_slices=num_slice,\n",
+    "    slice_thicknesses=slice_thickness,\n",
+    "    num_probes=n_probe,\n",
+    "    verbose=True,\n",
+    "    energy=HT,\n",
+    "    defocus=defocus,\n",
+    "    semiangle_cutoff=semiangle_cutoff,\n",
+    "    device=device,\n",
+    ").preprocess(\n",
+    "    plot_center_of_mass = False,\n",
+    "    plot_rotation=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ptycho_recon = mms_ptycho.reconstruct(\n",
+    "    reset=True,\n",
+    "    store_iterations=True,\n",
+    "    max_iter = 20,\n",
+    "    normalization_min=1,\n",
+    ").visualize(\n",
+    "    iterations_grid = 'auto'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ptycho_recon.visualize(figsize=(16, 8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, num_slice+1, figsize=(4*(num_slice+1), 4))\n",
+    "\n",
+    "slice_object = ptycho_recon.object_iterations[29]\n",
+    "\n",
+    "for i in range(num_slice):\n",
+    "    rotated_crop = ptycho_recon._crop_rotate_object_fov(slice_object[i])\n",
+    "    rotated_shape = rotated_crop.shape\n",
+    "\n",
+    "    rotate_extent = [\n",
+    "        0,\n",
+    "        ptycho_recon.sampling[1] * rotated_shape[1],\n",
+    "        ptycho_recon.sampling[0] * rotated_shape[0],\n",
+    "        0,\n",
+    "    ]\n",
+    "    ax[i].imshow(np.angle(rotated_crop), cmap='inferno', extent=rotate_extent)\n",
+    "\n",
+    "sum_object = ptycho_recon._crop_rotate_object_fov(np.sum(slice_object, axis=0))\n",
+    "ax[-1].imshow(np.angle(sum_object), cmap='inferno', extent=rotate_extent)\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
    ]
   }
  ],
