--- a/RDF/RDF_analysis_4DSTEM.ipynb
+++ b/RDF/RDF_analysis_4DSTEM.ipynb
@@ -19,7 +19,6 @@
     "import ipywidgets as pyw\n",
     "from py4DSTEM.process.utils import single_atom_scatter\n",
     "\n",
-    "plt.rcParams['font.family'] = 'Cambria'\n",
     "color_rep = [\"black\", \"orange\", \"purple\", \"blue\", \"red\", \"green\", \"yellow\", \"lime\", \n",
     "             \"cyan\", \"magenta\", \"lightgray\", \"peru\", \"springgreen\", \"deepskyblue\", \n",
     "             \"hotpink\", \"darkgray\"]\n",
@@ -71,13 +70,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load a data\n",
+    "# Load a data (3D data)\n",
     "rot_dp = tifffile.imread(raw_adr)\n",
     "print(rot_dp.shape)\n",
     "rot_dp_data = rot_dp.copy()\n",
     "print(rot_dp_data.shape)\n",
     "n_dim = len(rot_dp_data.shape)\n",
-    "print(n_dim)"
+    "print(n_dim)\n",
+    "\n",
+    "# Load a data (customized)\n",
+    "# rot_dp = []\n",
+    "# for i in range(len(raw_adr)):\n",
+    "#     if raw_adr[i][-3:] == \"tif\":\n",
+    "#         rot_dp.append(tifffile.imread(raw_adr[i]).reshape(1, -1))\n",
+    "#     elif raw_adr[i][-3:] == \"dm4\":\n",
+    "#         rot_dp.append(py4DSTEM.io.import_file(raw_adr[i])[0].reshape(1, -1))\n",
+    "\n",
+    "# rot_dp = np.asarray(rot_dp)\n",
+    "# print(rot_dp.shape)\n",
+    "# rot_dp_data = rot_dp.copy()\n",
+    "# print(rot_dp_data.shape)\n",
+    "# n_dim = len(rot_dp_data.shape)\n",
+    "# print(n_dim)"
    ]
   },
   {
@@ -89,7 +103,7 @@
    "source": [
     "scale = [2.2478, 2.2478, 0.01722]\n",
     "origin = [0, 0, 0]\n",
-    "unit = ['nm', 'nm', '1/A']\n",
+    "unit = ['nm', 'nm', '1/Å']\n",
     "size = rot_dp_data.shape"
    ]
   },
@@ -102,21 +116,18 @@
    "source": [
     "k_list = np.arange(0, scale[2]*rot_dp_data.shape[2], scale[2])\n",
     "\n",
-    "Fst_AF = single_atom_scatter(elements=[6], composition=[1.0], q_coords=k_list, units='A')\n",
-    "Fst_AF.get_scattering_factor()\n",
-    "Fst_AFF = Fst_AF.fe\n",
+    "elements = np.array([3, 4, 5, 6])\n",
+    "compositions = np.array([0.1, 0.1, 0.1, 0.7])\n",
+    "AFFs = []\n",
+    "for i, Z in enumerate(elements):\n",
+    "    AFF = single_atom_scatter(elements=[Z], composition=[compositions[i]], q_coords=k_list, units='A')\n",
+    "    AFF.get_scattering_factor()\n",
+    "    AFFs.append(AFF.fe)\n",
     "\n",
-    "Snd_AF = single_atom_scatter(elements=[6], composition=[1.0], q_coords=k_list, units='A')\n",
-    "Snd_AF.get_scattering_factor()\n",
-    "Snd_AFF = Snd_AF.fe\n",
+    "AFFs = np.array(AFFs)\n",
     "\n",
-    "composition = [0.5, 0.5]\n",
-    "AF_mean_square = (Fst_AFF*composition[0] + Snd_AFF*composition[1])**2\n",
-    "AF_square_mean = Fst_AFF**2*composition[0] + Snd_AFF**2*composition[1]\n",
-    "\n",
-    "#max_nor = np.max(AF_square_mean)\n",
-    "#AF_mean_square /= max_nor\n",
-    "#AF_square_mean /= max_nor"
+    "AF_mean_square = np.sum(AFFs * elements[np.newaxis, :], axis=0)**2\n",
+    "AF_square_mean = np.sum((AFFs * elements[np.newaxis, :])**2, axis=0)"
    ]
   },
   {
@@ -382,7 +393,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -396,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
