--- a/4D-STEM_viewer.ipynb
+++ b/4D-STEM_viewer.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# J. Ryu, Electron Microscopy and Spectroscopy Lab., Seoul National University\n",
+    "# Jinseok Ryu\n",
     "# 4D-STEM viewer\n",
     "# it supports EMPAD data (.raw) and tiff stack (.tif or .tiff)\n",
     "# 20220414\n",
