--- a/cepstrum/cepstral_STEM.ipynb
+++ b/cepstrum/cepstral_STEM.ipynb
@@ -6,14 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Jinseok Ryu\n",
+    "# jinseuk56@gmail.com\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import tkinter.filedialog as tkf\n",
     "import tifffile\n",
     "import sys\n",
-    "sys.path.append(\"E:/github_repo/4DSTEM_processing/\")\n",
-    "from FDSTEM_process import *\n",
-    "plt.rcParams['font.family'] = 'Cambria'"
+    "sys.path.append(\"\")\n",
+    "from FDSTEM_process import *"
    ]
   },
   {
