--- a/imaging/virtual_imaging.ipynb
+++ b/imaging/virtual_imaging.ipynb
@@ -7,15 +7,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Jinseok Ryu, PhD\n",
+    "# jinseuk56@gmail.com\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import sys\n",
-    "sys.path.append(\"E:/github_repo/4DSTEM_processing/\")\n",
+    "sys.path.append(\"\")\n",
     "from FDSTEM_process import *\n",
     "import tifffile\n",
     "import tkinter.filedialog as tkf\n",
-    "import time\n",
-    "plt.rcParams['font.family'] = 'Cambria'"
+    "import time"
    ]
   },
   {
