--- a/FEM/fem_analysis_comparison.ipynb
+++ b/FEM/fem_analysis_comparison.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# J. Ryu, Electron Microscopy and Spectroscopy Lab., Seoul National University\n",
+    "# Jinseok Ryu\n",
+    "# jinseuk56@gmail.com\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import hyperspy.api as hys\n",
