--- a/FEM/fem_analysis_revised.ipynb
+++ b/FEM/fem_analysis_revised.ipynb
@@ -7,14 +7,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# J. Ryu, Electron Microscopy and Spectroscopy Lab., Seoul National University\n",
+    "# Jinseok Ryu, PhD\n",
+    "# jinseuk56@gmail.com\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import tkinter.filedialog as tkf\n",
     "import time\n",
     "import tifffile\n",
     "import sys\n",
-    "sys.path.append(\"E:/github_repo/4DSTEM_processing/\")\n",
+    "sys.path.append(\"\")\n",
     "from FDSTEM_process import *\n",
     "plt.rcParams['font.family'] = 'Cambria'"
    ]
