--- a/FEM/transformation_radial_avg_var.ipynb
+++ b/FEM/transformation_radial_avg_var.ipynb
@@ -13,7 +13,7 @@
     "import tkinter.filedialog as tkf\n",
     "import tifffile\n",
     "import sys\n",
-    "sys.path.append(\"E:/github_repo/4DSTEM_processing/\")\n",
+    "sys.path.append(\"\")\n",
     "from FDSTEM_process import *\n",
     "plt.rcParams['font.family'] = 'Cambria'"
    ]
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "raw_adrs = tkf.askopenfilenames()\n",
-    "print(*raw_adr, sep=\"\\n\")"
+    "print(*raw_adrs, sep=\"\\n\")"
    ]
   },
   {
@@ -42,7 +42,7 @@
     "    c_pos = fd.find_center(cbox_edge=15)\n",
     "    print(c_pos)\n",
     "\n",
-    "    fd.rotational_average(also_variance=True)\n",
+    "    fd.rotational_average(rot_variance=True)\n",
     "    tifffile.imsave(raw_adr[:-4]+\"_radial_avg.tif\", fd.radial_avg_stack)\n",
     "    tifffile.imsave(raw_adr[:-4]+\"_radial_var.tif\", fd.radial_var_stack)"
    ]
@@ -50,7 +50,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
