--- a/RDF/RDF_analysis_4DSTEM.ipynb
+++ b/RDF/RDF_analysis_4DSTEM.ipynb
@@ -7,6 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Jinseok Ryu, PhD\n",
+    "# radial distribution function or pair distribution function analysis for 4DSTEM\n",
+    "# jinseuk56@gmail.com\n",
+    "\n",
+    "\n",
     "from scipy.interpolate import interp1d\n",
     "from scipy.optimize import curve_fit\n",
     "from scipy.integrate import simpson\n",
@@ -126,8 +131,8 @@
     "\n",
     "AFFs = np.array(AFFs)\n",
     "\n",
-    "AF_mean_square = np.sum(AFFs * elements[np.newaxis, :], axis=0)**2\n",
-    "AF_square_mean = np.sum((AFFs * elements[np.newaxis, :])**2, axis=0)"
+    "AF_mean_square = np.sum(AFFs * elements[:, np.newaxis], axis=0)**2\n",
+    "AF_square_mean = np.sum((AFFs * elements[:, np.newaxis])**2, axis=0)"
    ]
   },
   {
@@ -407,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
