--- a/FEM/transformation_radial_avg_var.ipynb
+++ b/FEM/transformation_radial_avg_var.ipynb
@@ -7,15 +7,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# J. Ryu, Electron Microscopy and Spectroscopy Lab., Seoul National University\n",
+    "# Jinseok Ryu, PhD\n",
+    "# jinseuk56@gmail.com\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import tkinter.filedialog as tkf\n",
     "import tifffile\n",
     "import sys\n",
     "sys.path.append(\"\")\n",
-    "from FDSTEM_process import *\n",
-    "plt.rcParams['font.family'] = 'Cambria'"
+    "from FDSTEM_process import *"
    ]
   },
   {
