--- a/RDF/RDF_analysis_4DSTEM.ipynb
+++ b/RDF/RDF_analysis_4DSTEM.ipynb
@@ -77,6 +77,7 @@
    "source": [
     "# Load a data (3D data)\n",
     "rot_dp = tifffile.imread(raw_adr)\n",
+    "rot_dp = rot_dp[64:]\n",
     "print(rot_dp.shape)\n",
     "rot_dp_data = rot_dp.copy()\n",
     "print(rot_dp_data.shape)\n",
@@ -106,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scale = [2.2478, 2.2478, 0.01722]\n",
+    "scale = [1, 1, 0.02629]\n",
     "origin = [0, 0, 0]\n",
     "unit = ['nm', 'nm', '1/Å']\n",
     "size = rot_dp_data.shape"
@@ -121,8 +122,8 @@
    "source": [
     "k_list = np.arange(0, scale[2]*rot_dp_data.shape[2], scale[2])\n",
     "\n",
-    "elements = np.array([3, 4, 5, 6])\n",
-    "compositions = np.array([0.1, 0.1, 0.1, 0.7])\n",
+    "elements = np.array([8, 31])\n",
+    "compositions = np.array([0.4819, 0.5181])\n",
     "AFFs = []\n",
     "for i, Z in enumerate(elements):\n",
     "    AFF = single_atom_scatter(elements=[Z], composition=[compositions[i]], q_coords=k_list, units='A')\n",
@@ -142,8 +143,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit_range = [int(0.9*len(k_list)), len(k_list)-1]\n",
-    "cor_term_ctb = np.arange(-10.0, -5.0, 0.01)\n",
+    "fit_range = [int(0.7*len(k_list)), int(0.9*len(k_list))]\n",
+    "cor_term_ctb = np.arange(-5, 5, 0.01)\n",
     "fit_dif = np.mean(np.mean(rot_dp_data, axis=(0, 1))[fit_range[0]:fit_range[1]]) - np.mean(AF_mean_square[fit_range[0]:fit_range[1]])\n",
     "fit_ratios = []\n",
     "errs = []\n",
@@ -176,6 +177,7 @@
     "ax.plot(k_list, np.mean(rot_dp_data, axis=(0, 1)), 'k-')\n",
     "ax.plot(k_list, (AF_mean_square+cor_term_ctb[opt_ind]*fit_dif)*fit_ratios[opt_ind], 'r-')\n",
     "ax.plot(k_list, AF_square_mean*fit_ratios[opt_ind], 'g+')\n",
+    "ax.fill_between([k_list[fit_range[0]], k_list[fit_range[1]]], np.max(np.mean(rot_dp_data, axis=(0, 1))), alpha=0.5, color=\"green\")\n",
     "ax.grid()\n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -254,8 +256,8 @@
     "st = {\"description_width\": \"initial\"}\n",
     "y_wg = pyw.BoundedIntText(value=0, min=0, max=size[0]-1, description=\"y position\", style=st)\n",
     "x_wg = pyw.BoundedIntText(value=0, min=0, max=size[1]-1, description=\"x position\", style=st)\n",
-    "N_wg = pyw.FloatText(value=fit_ratios[opt_ind], step=0.0001, description=\"N\", style=st)\n",
-    "alpha_wg = pyw.FloatText(value=cor_term_ctb[opt_ind], step=0.005, description=\"alpha\", style=st)\n",
+    "N_wg = pyw.FloatText(value=fit_ratios[opt_ind], step=0.1, description=\"N\", style=st)\n",
+    "alpha_wg = pyw.FloatText(value=cor_term_ctb[opt_ind], step=1, description=\"alpha\", style=st)\n",
     "filter_wg = pyw.BoundedIntText(value=5, min=0, max=len(filter_types)-1, description=\"filter\", style=st)\n",
     "filter_low_wg = pyw.BoundedFloatText(value=0.05, min=0.0, max=1.0, step=0.01, description=\"filter low cut\", style=st)\n",
     "filter_cut_wg = pyw.BoundedFloatText(value=0.8, min=0.0, max=1.0, step=0.01, description=\"filter high cut\", style=st)\n",
